--- a/res/layout/activity_homepage.xml
+++ b/res/layout/activity_homepage.xml
@@ -40,16 +40,54 @@
 
         app:layout_constraintVertical_bias="0" />
 
-    <ImageView
+    <RelativeLayout
         android:id="@+id/news"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginTop="4dp"
-        android:src="@drawable/news1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/sgmimage"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        >
+        <TextView
+            android:id="@+id/desc_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/news"
+            android:textColor="#E00926"
+            android:textSize="32sp"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            />
+        <ImageView
+            android:id="@+id/news_img"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginTop="4dp"
+            android:src="@drawable/news1"
+            android:layout_below="@id/desc_text"
+            />
+
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_below="@id/desc_text"
+            android:layout_alignRight="@id/news_img"
+            android:layout_alignEnd="@+id/news_img"
+            android:layout_marginTop="14dp"
+            android:layout_marginRight="37dp"
+            android:layout_marginEnd="37dp"
+            android:src="@drawable/next" />
+
+        <TextView
+            android:layout_width="292dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/desc_text"
+            android:layout_marginBottom="-22dp"
+            android:background="#99FFFFFF"
+            android:text="@string/news_title"
+            android:textSize="12sp"
+            android:textColor="#000000"
+            android:textAlignment="center"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
 
 
 
@@ -73,6 +111,7 @@
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
+            android:onClick="toArticle"
              />
 
         <ImageButton
@@ -86,6 +125,7 @@
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
             android:layout_marginBottom="20dp"
+            android:onClick="toArticle"
             />
         <RelativeLayout
             android:layout_width="match_parent"
@@ -261,7 +301,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/letstrack"
+                android:text="@string/resepibusehat"
                 android:textColor="#E00926"
                 android:textSize="18sp"
                 android:layout_centerInParent="true"
@@ -269,6 +309,14 @@
         </RelativeLayout>
 
     </RelativeLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/placeholder4"
+        android:src="@drawable/tanyaahli_raw"
+        />
+
 
 
 
