--- a/res/layout/activity_homepage.xml
+++ b/res/layout/activity_homepage.xml
@@ -15,7 +15,7 @@
     >
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/profileButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
