attempt in search item, but failed

--- a/res/layout/activity_parenting.xml
+++ b/res/layout/activity_parenting.xml
@@ -89,5 +89,10 @@
             />
 
     </android.support.constraint.ConstraintLayout>
-    
+    <ListView
+        android:id="@+id/search_results"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/top_bar"/>
+
 </android.support.constraint.ConstraintLayout>
