--- a/res/layout/activity_article1.xml
+++ b/res/layout/activity_article1.xml
@@ -6,12 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EEEEEE"
-    tools:context=".BaseArticle"
-    android:paddingBottom="50dp"
+    tools:context=".Article1"
+
     >
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="50dp">
         <ImageButton
             android:id="@+id/profileButton"
             android:layout_width="50dp"
@@ -37,6 +38,7 @@
             android:background="@android:color/transparent"
             android:scaleType="centerCrop"
             android:src="@drawable/home"
+            android:onClick="toHomepage"
             app:layout_constraintRight_toLeftOf="@id/profileButton"
             app:layout_constraintTop_toTopOf="parent" />
         <TextView
@@ -77,16 +79,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/article1"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@id/source"
             />
         <RelativeLayout
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:background="@drawable/shadow_border"
-            android:layout_marginTop="268dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/title_image" >
+            app:layout_constraintTop_toBottomOf="@id/title_image" >
 
             <TextView
 
